New functions:
* New function "sjp.glm.int" to plot probability curves of interaction terms in generalized linear models.
* New function "sjp.glmer.int" to plot probability curves of interaction terms in generalized linear mixed effects models.
* New function "sjp.lmer.int" to plot probability curves of interaction terms in linear mixed effects models.

Changes to functions:
* "sjt.xtab" can now show/hide observed values in table cells with "showObserved" parameter.
* "sjt.df" now distinguishes more variable / vector types (like ordinal and categorial, instead of factor only, or double, integer and numeric).
* "sjp.lm1" no longer requires the data frame used to fit the model.
* Added parameter "useResiduals" to "sjp.lm1", so residuals may be plotted against predictor (for diagnostic purposes).
* Added parameters "showCountValues" and "showPercentageValues" to function "sjp.xtab", so either percentage value labels, count value labels or both can be printed.
* Removed parameters "maxYlim" and "upperYLim" from "sjp.grpfrq", "sjp.xtab" and "sjp.frq", and added "axisLimits.y" as new option to define y-axis-range.
* Parameter "labelPos" now also works for flipped coordinates in "sjp.xtab".

Bug fixes:
* Parameter "geom.size" was not applied to bar charts in "sjp.grpfrq" - fixed.
* Q-Q plot of "sjp.lm.ma" used wrong linear q-q line - fixed.


Version 1.6
------------------------------------------------------------------------------
General:
* Comprehensive online manual available at http://www.strengejacke.de/sjPlot/
* Most geom-aesthetics and theme-options have been removed from all "sjp"-functions. This allows more flexibility in creating own themes or using other packages that modify theme appearance. Use the new function "sjp.setTheme" to globally change theme- and geom-aesthetics for sjp-functions, or use packages like "ggthemr" or "ggthemes" to tweak the plot appearance.
* Replaced "b" with beta-sign in model-summary for "sjp.lm" and "sjp.lm1".