@@ -6,6 +6,7 @@ New functions:
 * New function "sjp.lmer.int" to plot probability curves of interaction terms in linear mixed effects models.
 
 Changes to functions:
+* Added parameter "ri.nr" to "sjp.glmer" and "sjp.lmer" to select which random effects of which random intercept to plot, in case the model has multiple random intercepts.
 * "sjt.xtab" can now show/hide observed values in table cells with "showObserved" parameter.
 * "sjt.df" now distinguishes more variable / vector types (like ordinal and categorial, instead of factor only, or double, integer and numeric).
 * "sjp.lm1" no longer requires the data frame used to fit the model.
